--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
-  "name": "sngrl/sphinxsearch",
+  "name": "thothmedia/sphinxsearch",
+  "type": "vcs",
   "description": "Laravel package to query Sphinxsearch in Laravel 5",
   "keywords": [
     "sphinx",
@@ -7,12 +8,9 @@
     "laravel",
     "laravel 5"
   ],
-  "homepage": "http://github.com/sngrl/sphinxsearch",
-  "license": "Apache-2.0",
   "authors": [
     {
-      "name": "sngrl",
-      "email": "reserved@mail.ru"
+      "name": "ThothMedia",
     }
   ],
   "require": {
@@ -21,8 +19,8 @@
     "gigablah/sphinxphp": "2.0.8"
   },
   "autoload": {
-    "psr-0": {
-      "sngrl\\SphinxSearch": "src/"
+    "psr-4": {
+      "ThothMedia\\SphinxSearch": "src/"
     }
   }
 }
