--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-  "name": "thothmedia/sphinxsearch",
+  "name": "ThothMedia/SphinxSearch",
   "type": "vcs",
-  "description": "Laravel package to query Sphinxsearch in Laravel 5",
+  "description": "Laravel package to query Sphinxsearch in Laravel 5 modified by ThothMedia",
   "keywords": [
     "sphinx",
     "sphinxsearch",
@@ -10,7 +10,7 @@
   ],
   "authors": [
     {
-      "name": "ThothMedia",
+      "name": "ThothMedia"
     }
   ],
   "require": {
